--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
+    "build": "webpack",
+    "heroku-postbuild": "echo Skip build on Heroku"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +16,6 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.17.1"
-  }
+  },
+  "heroku-run-build-script": true
 }
